- Dodan UI v nastavitvah - Dodani zvoki pozivnikov - Dodan AlertDialog ko se klikne "Zvok" v nastavitvah - Dodan gumb "Shrani"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="vibriraj">Vibriraj</string>
     <string name="glasnost">Glasnost</string>
     <string name="zvok_pozivnika">Zvok pozivnika</string>
+    <string name="shrani">SHRANI</string>
     <string-array name="select_sound">
         <item>Pozivnik_1</item>
         <item>Pozivnik_2</item>
