--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="zvok_pozivnika">Zvok pozivnika</string>
     <string name="shrani">SHRANI</string>
     <string-array name="select_sound">
+        <item>Izberi zvok pozivnika</item>
         <item>Pozivnik_1</item>
         <item>Pozivnik_2</item>
         <item>Pozivnik_3</item>
