--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="glasnost">Glasnost</string>
     <string name="zvok_pozivnika">Zvok pozivnika</string>
     <string name="shrani">SHRANI</string>
+    <string name="success_added_pager_msg">Pozivnik dodan</string>
+    <string name="failed_add_pager_msg">Dodaj številko ali besedo</string>
     <string-array name="select_sound">
         <item>Izberi zvok pozivnika</item>
         <item>Pozivnik_1</item>
