- Dodan activity UI za proženje. Intervencije.net in brez.
- Dodan UI v "activity_add_new_pager_dialog"
- Dodan gumb "test" v nastavitvah

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="shrani">SHRANI</string>
     <string name="success_added_pager_msg">Pozivnik dodan</string>
     <string name="failed_add_pager_msg">Dodaj številko ali besedo</string>
+    <string name="test">test</string>
     <string-array name="select_sound">
         <item>Izberi zvok pozivnika</item>
         <item>Pozivnik_1</item>
