--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="shrani">SHRANI</string>
     <string name="success_added_pager_msg">Pozivnik dodan</string>
     <string name="failed_add_pager_msg">Dodaj številko ali besedo</string>
+    <string name="service_working">Deluje</string>
+    <string name="service_description">Obvestilo potrebno za pravilno delovanje pozivnika.</string>
     <string name="test">test</string>
     <string-array name="select_sound">
         <item>Izberi zvok pozivnika</item>
